Atualizado lista de aprovadores PCP

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -275,8 +275,6 @@ fieldset#MCMDescription {
                                     <option value="PSA">PSA</option>
                                     <option value="HPE">HPE</option>
                                     <option value="REN">RENAULT</option>
-                                <!--<option value="FRM">FORD (MOGI MIRIM)</option>
-                                    <option value="FRC">FORD (CAMAÇARI)</option>-->
                                     <option value="KIA">KIA</option>
                                     <option value="HYU">HYUNDAI</option>
                                     <option value="CHE">CHERY</option>
@@ -409,6 +407,8 @@ fieldset#MCMDescription {
                                 <option value="TECTOR"></option>
                                 <option value="MILITAR"></option>
                                 <option value="FM/F3M"></option>
+                                <option value="GSEN4"></option>
+                                <option value="GEM PU"></option>
                                 <option value="ATS 4CYL"></option>
                                 <option value="ATS 6CYL"></option>
                                 </datalist>
@@ -453,6 +453,8 @@ fieldset#MCMDescription {
                 <li id="CLEYALVE">CLEYTON ALVES</li>
                 <li id="CARLMART">CARLOS MARTINS</li>
                 <li id="ELTONOGU">ELTON NOGUEIRA</li>
+                <li id="CIRINA77">ALINE CIRINO</li>
+                <li id="ELTOBORG">ELTON DOS SANTOS</li>
                 <li id="LIBERF72">FABIO LIBERTINI</li>
                 <li id="WELLDESO">WELLINGTON DE SOUZA</li>
                 <li id="ROMUMART">ROMULO MARTINS</li>
@@ -479,13 +481,12 @@ fieldset#MCMDescription {
                 <li id="X1GABRFA">GABRIELA FACHIN</li>
                 <li id="DOSSAC98">CAMILA DOS SANTOS</li>
                 <li id="CARDOA96">ANDRIELLY CARDOSO</li>
-                <li id="CIRINA77">ALINE CIRINO</li>
 
             </ul>
             
             <table id="fluxo_ta2_vis" class="resultado_nvis">
                 <tr><td id="TA2_nomeID01">MARCSANT</td><td class="neutral">01</td><td id="TA2_start01">07.02.2020</td><td class="neutral">00:00:00</td><td id="TA2_Due01">12.02.2020</td></tr>
-                <tr><td id="TA2_nomeID02">MARCSANT</td><td class="neutral">01</td><td id="TA2_start02">07.02.2020</td><td class="neutral">00:00:00</td><td id="TA2_Due02">12.02.2020</td></tr>
+                <tr><td id="TA2_nomeID02">MARCSANT</td><td class="neutral">02</td><td id="TA2_start02">07.02.2020</td><td class="neutral">00:00:00</td><td id="TA2_Due02">12.02.2020</td></tr>
                 <tr><td id="TA2_nomeID03">MARCSANT</td><td class="neutral">02</td><td id="TA2_start03">07.02.2020</td><td class="neutral">00:00:00</td><td id="TA2_Due03">12.02.2020</td></tr>
                 <tr><td id="TA2_nomeID04">MARCSANT</td><td class="neutral">02</td><td id="TA2_start04">07.02.2020</td><td class="neutral">00:00:00</td><td id="TA2_Due04">12.02.2020</td></tr>
                 <tr><td id="TA2_nomeID05">MARCSANT</td><td class="neutral">02</td><td id="TA2_start05">07.02.2020</td><td class="neutral">00:00:00</td><td id="TA2_Due05">12.02.2020</td></tr>
@@ -516,7 +517,7 @@ fieldset#MCMDescription {
                 <table id="workflow_ref">
                     <tr><td>Nivel</td>  <td>Atvidade</td>                                   <td>Responsável</td>         <td>Nome</td><td>Backup</td><td>Prazo</td></tr>
                     <tr><td>01</td>     <td>SAP COST - Cadastrar dados mestres C01.</td>    <td id="nomeID01">MARCSANT</td><td id="nome01">MARCELO SANTOS</td><td><input type="checkbox" id="bkup01" name="bkup01"></td><td class="periodoDias_nvis" id="task01">4</td></tr>
-                    <tr><td>01</td>     <td>SAP ENG - Checar BOM.</td>                      <td id="nomeID02">MARCSANT</td><td id="nome02">MARCELO SANTOS</td><td><input type="checkbox" id="bkup02" name="bkup02"></td><td class="periodoDias_nvis" id="task02">4</td></tr>
+                    <tr><td>02</td>     <td>SAP ENG - Checar BOM.</td>                      <td id="nomeID02">MARCSANT</td><td id="nome02">MARCELO SANTOS</td><td><input type="checkbox" id="bkup02" name="bkup02"></td><td class="periodoDias_nvis" id="task02">4</td></tr>
                     <tr><td>02</td>     <td>SAP COMPRAS - Definir Fornecedor.</td>          <td id="nomeID03">MARCSANT</td><td id="nome03">MARCELO SANTOS</td><td><input type="checkbox" id="bkup03" name="bkup03"></td><td class="periodoDias_nvis" id="task03">5</td></tr>
                     <tr><td>02</td>     <td>SAP PCP - Cadastrar visoes de logistica.</td>   <td id="nomeID04">MARCSANT</td><td id="nome04">MARCELO SANTOS</td><td><input type="checkbox" id="bkup04" name="bkup04"></td><td class="periodoDias_nvis" id="task04">5</td></tr>
                     <tr><td>02</td>     <td>SAP VENDAS - Cadastrar visão de venda.</td>     <td id="nomeID05">MARCSANT</td><td id="nome05">MARCELO SANTOS</td><td><input type="checkbox" id="bkup05" name="bkup05"></td><td class="periodoDias_nvis" id="task05">4</td></tr>
