--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -33,7 +33,7 @@
 
 #botao_reset {
     position: relative;
-    left: 350px;
+    left: 353px;
     top: 55px;
     width: 140px;
     }
@@ -248,6 +248,7 @@ fieldset#MCMDescription {
                         <fieldset id="usuario" class="formulario_nok"><legend class="legenda">Identificação do Usuário</legend> 
                             <input type="radio" name="UserID" id="cUserID" checked value="" style="display: none;"/>
                             <input type="radio" name="UserID" id="radio_COSTAF12" value="COSTAF12"/><label class="legenda-radio" for="radio_COSTAF12">Fabio</label>
+                            <input type="radio" name="UserID" id="radio_DOSSAG30" value="DOSSAG30"/><label class="legenda-radio" for="radio_DOSSAG30">Gabriel</label>
                             <input type="radio" name="UserID" id="radio_JEANFRA1" value="JEANFRA1"/><label class="legenda-radio" for="radio_JEANFRA1">Jean</label>
                             <input type="radio" name="UserID" id="radio_MARCSANT" value="MARCSANT"/><label class="legenda-radio" for="radio_MARCSANT">Marcelo</label>
                         </fieldset>
@@ -444,6 +445,7 @@ fieldset#MCMDescription {
                 <li id="MARCSANT">MARCELO PUPO</li>
                 <li id="COSTAF12">FABIO COSTA</li>
                 <li id="JEANFRA1">JEAN FRANCO</li>
+                <li id="DOSSAG30">GABRIEL DOS SANTOS</li>
                 <li id="MAYCOLIV">MAYCON OLIVEIRA</li>
                 <li id="THIABRIT">THIAGO BRITO</li>
                 <li id="DENICARD">DENILSON CARDOSO</li>
