ADDED: Comprados Packaging & Label

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -360,10 +360,11 @@ fieldset#MCMDescription {
                                     <option value="GSCM_018">COMPRADOS: Flex Couplings</option>
                                     <option value="GSCM_019">COMPRADOS: Gaskets</option>
                                     <option value="GSCM_020">COMPRADOS: Plastic</option>
-                                    <option value="GSCM_021">COMPRADOS: Rubber Components</option>
-                                    <option value="GSCM_022">COMPRADOS: Hydroforming</option>
-                                    <option value="GSCM_023">COMPRADOS: Manipulated Pipes(Importado)</option>
-                                    <option value="GSCM_024">COMPRADOS: Stampings(Importado)</option>
+                                    <option value="GSCM_021">COMPRADOS: Packaging & label</option>
+                                    <option value="GSCM_022">COMPRADOS: Rubber Components</option>
+                                    <option value="GSCM_023">COMPRADOS: Hydroforming</option>
+                                    <option value="GSCM_024">COMPRADOS: Manipulated Pipes(Importado)</option>
+                                    <option value="GSCM_025">COMPRADOS: Stampings(Importado)</option>
 
                                 
 
@@ -477,6 +478,7 @@ fieldset#MCMDescription {
                 <li id="PALORIB1">PALOMA RIBEIRO</li>
                 <li id="EVERROSA">EVERI ROSADA</li>
                 <li id="CONSTR63">RODRIGO CONSTANTINO</li>
+                <li id="REISL099">LARISSE REIS</li>
                 <li id="RODRCHA1">RODRIGO CHAVES</li>
                 <li id="FLAVDOMI">FLAVIO DOMINGUES</li>
                 <li id="DENIALVE">DENISE ALVES</li>
