Added Flavio Catarenussi

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -461,6 +461,7 @@ fieldset#MCMDescription {
                 <li id="LIBERF72">FABIO LIBERTINI</li>
                 <li id="WELLDESO">WELLINGTON DE SOUZA</li>
                 <li id="ROMUMART">ROMULO MARTINS</li>
+                <li id="FLAVCATA">FLAVIO CATARENUSSI</li>
                 <li id="ANDRROSA">ANDRE ROSA</li>
                 <li id="DIOGBOVE">DIOGO BOVELONI</li>
                 <li id="JULILOPE">JULIO LOPES</li>
