UPDATE Approver list

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -281,7 +281,8 @@ fieldset#MCMDescription {
                                     <option value="NIS">NISSAN</option>
                                 </optgroup>
                                 <optgroup label="CTOH">
-                                    <option value="DAI">MERCEDES BENZ</option>
+                                    <option value="DA6">DAIMLER EU6</option>
+                                    <option value="DA5">DAIMLER EU5</option>
                                     <option value="SCN">SCANIA</option>
                                     <option value="IVE">IVECO</option>
                                     <option value="VWC">VWCO</option>
