Atualizado aprovadores de processos

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -463,6 +463,8 @@ fieldset#MCMDescription {
                 <li id="ROMUMART">ROMULO MARTINS</li>
                 <li id="FLAVCATA">FLAVIO CATARENUSSI</li>
                 <li id="ANDRROSA">ANDRE ROSA</li>
+                <li id="LUCACALE">LUCAS CALEFI</li>
+                <li id="EDMALIMA">EDMAR LIMA</li>
                 <li id="DIOGBOVE">DIOGO BOVELONI</li>
                 <li id="JULILOPE">JULIO LOPES</li>
                 <li id="JOSEGASP">JOSE GASPARINI</li>
