Changed GERVPETR para WENDDASI

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -486,6 +486,7 @@ fieldset#MCMDescription {
                 <li id="FLAVDOMI">FLAVIO DOMINGUES</li>
                 <li id="DENIALVE">DENISE ALVES</li>
                 <li id="GERVPETR">GERVASIO PETRECA</li>
+                <li id="WENDDASI">WENDER DA SILVA</li>
                 <li id="X1GABRFA">GABRIELA FACHIN</li>
                 <li id="DOSSAC98">CAMILA DOS SANTOS</li>
                 <li id="CARDOA96">ANDRIELLY CARDOSO</li>
