--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -457,6 +457,8 @@ fieldset#MCMDescription {
                 <li id="CARLMART">CARLOS MARTINS</li>
                 <li id="ELTONOGU">ELTON NOGUEIRA</li>
                 <li id="CIRINA14">ALINE CIRINO</li>
+
+<!--PROCESSOS-->
                 <li id="ELTOBORG">ELTON DOS SANTOS</li>
                 <li id="LIBERF72">FABIO LIBERTINI</li>
                 <li id="WELLDESO">WELLINGTON DE SOUZA</li>
@@ -465,6 +467,7 @@ fieldset#MCMDescription {
                 <li id="ANDRROSA">ANDRE ROSA</li>
                 <li id="LUCACALE">LUCAS CALEFI</li>
                 <li id="EDMALIMA">EDMAR LIMA</li>
+
                 <li id="DIOGBOVE">DIOGO BOVELONI</li>
                 <li id="JULILOPE">JULIO LOPES</li>
                 <li id="JOSEGASP">JOSE GASPARINI</li>
@@ -476,7 +479,11 @@ fieldset#MCMDescription {
                 <li id="X1LUCAS1">LUCAS SOUZA</li>
                 <li id="CELIINNO">CELIA INNOCENTE</li>
                 <li id="GIULSILV">GIULIANO SILVA</li>
+
+<!--COMPRAS-->
+
                 <li id="SIDNSILV">SIDNEY DA SILVA</li>
+                <li id="LOPESF82">FERNANDA LOPES</li>
                 <li id="GLEIDARO">GLEIDSON ROSA</li>
                 <li id="PALORIB1">PALOMA RIBEIRO</li>
                 <li id="EVERROSA">EVERI ROSADA</li>
@@ -484,6 +491,7 @@ fieldset#MCMDescription {
                 <li id="REISL099">LARISSE REIS</li>
                 <li id="RODRCHA1">RODRIGO CHAVES</li>
                 <li id="FLAVDOMI">FLAVIO DOMINGUES</li>
+
                 <li id="DENIALVE">DENISE ALVES</li>
                 <li id="GERVPETR">GERVASIO PETRECA</li>
                 <li id="WENDDASI">WENDER DA SILVA</li>
