Adic texto CQI15 para PSA

--- a/sapplpecm_desc.html
+++ b/sapplpecm_desc.html
@@ -466,7 +466,7 @@ button.botao {
 
         //Linha linha Notas Importantes.
 
-        if (customerName.value == "GMB" || customerName.value == "FCA") {
+        if (customerName.value == "GMB" || customerName.value == "FCA" || customerName.value == "PSA") {
             linha_notaCQI15 = `<br>Notas Importantes:
                         <br>1. Elaboração e revisão dos desenhos 2D, devem conter os IDs de cada solda indicada.
                         <br>2. DFMEA, PFMEA, FIP e PLANO DE CONTROLE, devem conter os mesmos IDs das soldas registrados nos desenhos 2D.
