Updated engineering resp

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -248,7 +248,7 @@ fieldset#MCMDescription {
                         <fieldset id="usuario" class="formulario_nok"><legend class="legenda">Identificação do Usuário</legend> 
                             <input type="radio" name="UserID" id="cUserID" checked value="" style="display: none;"/>
                             <input type="radio" name="UserID" id="radio_COSTAF12" value="COSTAF12"/><label class="legenda-radio" for="radio_COSTAF12">Fabio</label>
-                            <input type="radio" name="UserID" id="radio_DOSSAG30" value="DOSSAG30"/><label class="legenda-radio" for="radio_DOSSAG30">Gabriel</label>
+                            <input type="radio" name="UserID" id="radio_X1GABRD7" value="X1GABRD7"/><label class="legenda-radio" for="radio_X1GABRD7">Gabriel</label>
                             <input type="radio" name="UserID" id="radio_MARCSANT" value="MARCSANT"/><label class="legenda-radio" for="radio_MARCSANT">Marcelo</label>
                         </fieldset>
 
@@ -446,11 +446,12 @@ fieldset#MCMDescription {
                 <li id="MARCSANT">MARCELO PUPO</li>
                 <li id="COSTAF12">FABIO COSTA</li>
                 <li id="JEANFRA1">JEAN FRANCO</li>
-                <li id="DOSSAG30">GABRIEL DOS SANTOS</li>
+                <li id="X1GABRD7">GABRIEL DOS SANTOS</li>
                 <li id="MAYCOLIV">MAYCON OLIVEIRA</li>
                 <li id="THIABRIT">THIAGO BRITO</li>
                 <li id="DENICARD">DENILSON CARDOSO</li>
                 <li id="SALAPEDA">SALATYEL PEDAO</li>
+                <li id="NADIDINI">NADIE DINIZ</li>
                 <li id="TULISILV">TULIO SILVA</li>
                 <li id="GRASDASI">GRASIELA SILVA</li>
                 <li id="CLEYALVE">CLEYTON ALVES</li>
