--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -33,9 +33,9 @@
 
 #botao_reset {
     position: relative;
-    left: 353px;
+    left: 380px;
     top: 55px;
-    width: 140px;
+    width: 100px;
     }
 
 button.botao {
@@ -152,6 +152,7 @@ div.itemChanged_vis fieldset{
 fieldset#usuario {
     height: 40px;
     padding-top: 10px;
+    padding-left: 10px;
 }
 fieldset#businesStatus {
     height: 50px;
@@ -248,6 +249,7 @@ fieldset#MCMDescription {
                         <fieldset id="usuario" class="formulario_nok"><legend class="legenda">Identificação do Usuário</legend> 
                             <input type="radio" name="UserID" id="cUserID" checked value="" style="display: none;"/>
                             <input type="radio" name="UserID" id="radio_COSTAF12" value="COSTAF12"/><label class="legenda-radio" for="radio_COSTAF12">Fabio</label>
+                            <input type="radio" name="UserID" id="radio_LARICARD" value="LARICARD"/><label class="legenda-radio" for="radio_LARICARD">Larissa</label>
                             <input type="radio" name="UserID" id="radio_X1GABRD7" value="X1GABRD7"/><label class="legenda-radio" for="radio_X1GABRD7">Gabriel</label>
                             <input type="radio" name="UserID" id="radio_MARCSANT" value="MARCSANT"/><label class="legenda-radio" for="radio_MARCSANT">Marcelo</label>
                         </fieldset>
@@ -445,6 +447,7 @@ fieldset#MCMDescription {
                 <li id="MARCSANT ">DELETE TASK (Shift + F2)</li>
                 <li id="MARCSANT">MARCELO PUPO</li>
                 <li id="COSTAF12">FABIO COSTA</li>
+                <li id="LARICARD">LARISSA CARDOSO</li>
                 <li id="JEANFRA1">JEAN FRANCO</li>
                 <li id="X1GABRD7">GABRIEL DOS SANTOS</li>
                 <li id="MAYCOLIV">MAYCON OLIVEIRA</li>
