--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -235,7 +235,7 @@ fieldset#MCMDescription {
                     <li id="lista-segundo">Catalisador</li>
                 </ul>
             </nav>
-            <p style="font-size: 9pt;font-style: italic;margin-right: 15px;text-align: right;">Atualizado em 29 de Agosto de 2021<br>Por Marcelo Pupo</p>
+            <p style="font-size: 9pt;font-style: italic;margin-right: 15px;text-align: right;">Atualizado em 03 de março de 2023<br>Por Marcelo Pupo</p>
         </section>
 
         <aside id="lado_direito">
@@ -466,7 +466,6 @@ fieldset#MCMDescription {
                 <li id="WELLDESO">WELLINGTON DE SOUZA</li>
                 <li id="ROMUMART">ROMULO MARTINS</li>
                 <li id="FLAVCATA">FLAVIO CATARENUSSI</li>
-                <li id="ANDRROSA">ANDRE ROSA</li>
                 <li id="LUCACALE">LUCAS CALEFI</li>
                 <li id="EDMALIMA">EDMAR LIMA</li>
 
